--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,7 @@ a {
 .hero {
     background-color: #2e2f42;
     margin-bottom: 120px;
+    padding: 188px 0
 }
 
 .title-hero {
@@ -132,6 +133,7 @@ a {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
+    max-width: 496px;
 }
 
 .btn-hero {
@@ -142,6 +144,10 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
     
 }   
 
@@ -151,9 +157,7 @@ a {
 }
 
 .hero-container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    padding: 188px 0;
 
 }
 
@@ -161,7 +165,6 @@ a {
 
 
 .offer {
-    margin-bottom: 120px;
     padding: 120px 0
 }
 
