--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ a {
     height: 56px;
     border: none;
     border-radius: 4px;
+    display: block;
     
 }   
 
@@ -168,7 +169,17 @@ a {
     padding: 120px 0
 }
 
-.offer-title {}
+.visually-hidden {
+    position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
+}
 
 .offer-list {
     display: flex;
