--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ a {
 
 .page-footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-logo .logo-part {
@@ -107,6 +108,7 @@ a {
     padding-top: 100px;
     padding-left: 156px;
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 
@@ -122,7 +124,6 @@ a {
 
 .hero {
     background-color: #2e2f42;
-    margin-bottom: 120px;
     padding: 188px 0
 }
 
@@ -234,7 +235,7 @@ width: calc((100% - 72px) / 4);
 }
 
 .team-container {
-
+   padding: 32px 0;
 }
 
 .card-content {
@@ -248,11 +249,11 @@ width: calc((100% - 72px) / 4);
     display: flex;
     flex-direction: row;
     gap: 24px;
-    border-radius: 0 0 4px 4px;
 }
 
 .team-item {
-    background-color: #FFFFFF
+    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-img {
@@ -278,13 +279,20 @@ width: calc((100% - 72px) / 4);
 
 .portfolio {
     margin-bottom: 96px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .portfolio-container {
+    
 }
 
 .portfolio-t {
     text-align: left;
+    padding: 32px 16px;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
 }
 
 
@@ -322,8 +330,6 @@ width: calc((100% - 72px) / 4);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-top: 32px;
-    padding-left: 16px;
     margin-bottom: 8px;
 }
 
@@ -333,8 +339,6 @@ width: calc((100% - 72px) / 4);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    padding-left: 16px;
-    padding-bottom: 32px;
 }
 
 .container {
