--- a/css/styles.css
+++ b/css/styles.css
@@ -172,15 +172,17 @@ a {
 
 .visually-hidden {
     position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        white-space: nowrap;
-        border: 0;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
 }
+
 
 .offer-list {
     display: flex;
@@ -239,8 +241,7 @@ width: calc((100% - 72px) / 4);
 }
 
 .card-content {
-   padding: 0 16px 32px 16px;
-   margin-top: 32px;
+   padding: 32px 0;
    text-align: center;
 }
 
